--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       }
     </script>
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=vA8jUBvkDTjv4dMk9u2CeDlw"></script>
   </head>
 
   <body>
