--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </script>
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=vA8jUBvkDTjv4dMk9u2CeDlw"></script>
+    <script type="text/javascript" src="https://ycpd-assets.oss-cn-shenzhen.aliyuncs.com/ycpd/javascript/jquery-ajax-builder.min.js"></script>
   </head>
 
   <body>
