--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
       }
     </script>
     <script src="https://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=vA8jUBvkDTjv4dMk9u2CeDlw"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=iEcXQ5MV5hbAx7str9MeVQ8jtwY07tDT"></script>
     <script type="text/javascript" src="https://ycpd-assets.oss-cn-shenzhen.aliyuncs.com/ycpd/javascript/jquery-ajax-builder.min.js"></script>
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?0916bc942fa3fb6b5eec93ca79eb9e43";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+    </script>
   </head>
 
   <body>
